# lindera-wasm

./: .gitignore  Cargo.toml  Makefile  README.md  index.html
.github/workflows/: periodic.yml  regression.yml  release.yml
docs/: index.html
example/: index.html  package-lock.json  package.json  webpack.config.js
example/performance/: package.json  pnpm-lock.yaml  svelte.config.js
example/performance/scripts/: benchmarkJS.mjs  benchmarkWASM.mjs  build.js
example/performance/src/lib/: index.ts  types.ts
example/performance/src/lib/components/: Spinner.svelte  TokenResult.svelte
example/performance/src/lib/constants/: index.ts  text.json
example/performance/src/routes/: +page.svelte
example/src/: index.js
src/: lib.rs
