[package]
name = "lindera-wasm"
version = "0.38.1"
edition = "2021"
description = "A morphological analysis library for WebAssembly."
documentation = "https://docs.rs/lindera-wasm"
homepage = "https://github.com/lindera/lindera-wasm"
repository = "https://github.com/lindera/lindera-wasm"
readme = "README.md"
keywords = ["morphological", "analysis", "library", "wasm", "webassembly"]
categories = ["text-processing"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
default = ["cjk"]  # No directories included
ipadic = ["lindera/ipadic"]  # Include IPADIC dictionary (Japanese)
ipadic-neologd = ["lindera/ipadic-neologd"]  # Include IPADIC NEologd dictionary (Japanese)
unidic = ["lindera/unidic"]  # Include UniDic dictionary (Japanese)
ko-dic = ["lindera/ko-dic"]  # Include ko-dic dictionary (Korean)
cc-cedict = ["lindera/cc-cedict"]  # Include CC-CEDICT dictionary (Chinese)
compress = ["lindera/compress"]  # Compress dictionaries
cjk = ["ipadic", "ko-dic", "cc-cedict", "compress"]  # Include IPADIC dictionary (Japanese), ko-dic dictionary (Korean), CC-CEDICT dictionary (Chinese), and compress dictionaries

[dependencies]
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.99" }

lindera = { version = "0.38.1", features = ["ipadic", "compress"] }

[dev-dependencies]
serde_json = "1.0.133"
wasm-bindgen-test = "0.3.49"
wasm-bindgen = { version = "0.2.99" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
